--- a/partial/develop.partial.html
+++ b/partial/develop.partial.html
@@ -245,7 +245,8 @@ mvn package
     <h2>Roadmap</h2>
 
     <p>
-        Byte Buddy has reached version 1.0 and is considered to be feature complete aside from two features that are
+        Byte Buddy has reached version <img style="width: 58px; height: 22px; object-fit: cover; object-position: right;" alt="Maven Central Version" src="https://img.shields.io/maven-central/v/net.bytebuddy/byte-buddy?style=flat-square">
+        and is considered to be feature-complete aside from two features that are
         not yet supported. With the release of version 1.0 a big emphasis is put on the library's stability and performance
         and new features are added defensively. Naturally, the evolution of the Java programming language and the
         byte code format will require newer releases in the future where it is the goal of Byte Buddy to offer
