Uses the direct link to the Google Group forum (no redirection and it's shorter)
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -265,7 +265,7 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             <dt>Free</dt>
             <dd>
                 General questions can be asked on <a href="https://stackoverflow.com/questions/tagged/byte-buddy">Stack Overflow</a>
-                or on the <a href="https://groups.google.com/forum/#!forum/byte-buddy">Byte Buddy mailing list</a> which also
+                or on the <a href="https://groups.google.com/g/byte-buddy">Byte Buddy mailing list</a> which also
                 serve as an archive for questions. Of course, bug reports will be considered also outside of a commercial
                 plan. For open source projects, it is sometimes possible to receive extended help for taking Byte Buddy into
                 use.
