--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -82,9 +82,9 @@
 
         <p>
             Byte Buddy offers excellent performance at production quality. It is stable and in use by distinguished
-            frameworks and tools such as <a href="http://mockito.io">Mockito</a>,
+            frameworks and tools such as <a href="https://mockito.org">Mockito</a>,
             <a href="https://hibernate.org">Hibernate</a>,
-            <a href="https://bazel.io">Google's Bazel build system</a> and
+            <a href="https://bazel.build">Google's Bazel build system</a> and
             <a href="https://github.com/raphw/byte-buddy/wiki/Projects-using-Byte-Buddy">many others</a>. Byte Buddy
             is also used by a large number of commercial products to great result. It is currently downloaded over 75
             million times a year.
