Updates cglib and Javassist links on tutorial.partial.html
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -237,7 +237,7 @@ class HardcodedFrameworkImpl implements Framework {
         framework could for example not be implemented this way since we want to extend classes and not interfaces.
     </dd>
     <dt>
-        <a href="http://cglib.sourceforge.net/">cglib</a>
+        <a href="https://github.com/cglib/cglib">cglib</a>
     </dt>
     <dd>
         The <i>code generation library</i> was implemented during the early years of Java and it did unfortunately not
@@ -245,7 +245,7 @@ class HardcodedFrameworkImpl implements Framework {
         active development became rather vague. For this reason, many of its users moved away from cglib.
     </dd>
     <dt>
-        <a href="http://www.csg.ci.i.u-tokyo.ac.jp/~chiba/javassist/">Javassist</a>
+        <a href="https://www.javassist.org">Javassist</a>
     </dt>
     <dd>
         This library comes with a compiler that takes strings containing Java source code which are translated into Java
