Adds acronym for Java Class Library on tutorial.partial.html
This was referenced without being defined.

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -232,7 +232,7 @@ class HardcodedFrameworkImpl implements Framework {
         <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/reflect/Proxy.html">Java proxies</a>
     </dt>
     <dd>
-        The Java Class Library comes with a proxy toolkit that allows for the creation of classes that implement a given
+        The Java Class Library (JCL) comes with a proxy toolkit that allows for the creation of classes that implement a given
         set of interfaces. This built-in proxy supplier is handy but also very limited. The above mentioned security
         framework could for example not be implemented this way since we want to extend classes and not interfaces.
     </dd>
