Makes text about benchmark metrics clearer on tutorial.partial.html
Each line on the table defines a different metric (class creation, interface implementation, etc).
This way, there are multiple metrics, not just one.

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -274,12 +274,12 @@ class HardcodedFrameworkImpl implements Framework {
     applications, the runtime characteristics of generated code is more likely to determine a best choice. And beyond
     the runtime of the generated code itself, the runtime for creating a dynamic class can also be a concern. Claiming
     that <i>We are the fastest!</i> is as easy as it is hard to provide a valid metric for a library's speed. Still, we
-    want to provide such a metric as a basic orientation. However, keep in mind that these results do not necessarily
-    translate to your more specific use case where you should rather conduct an individual metric.
+    want to provide some metrics as a basic orientation. However, keep in mind that these results do not necessarily
+    translate to your more specific use case where you should rather implement your own metrics.
 </p>
 
 <p>
-    Before discussing our metric, let us look at the raw data. The following table displays an operation's average
+    Before discussing our metrics, let us look at the raw data. The following table displays an operation's average
     runtime in nanoseconds where the standard deviation is attached in braces:
 </p>
 
