Fix method name on tutorial.partial.html
There is no `ClassLoadingStrategy.withProtectionDomain`.
The method is just `with`

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -716,7 +716,7 @@ Class&lt;?&gt; type = new ByteBuddy()
 <p>
     Note that when loading classes, the predefined class loading strategies are executed by applying the
     <code>ProtectionDomain</code> of the current execution context. Alternatively, all default strategies offer
-    the specification of an explicit protection domain by calling the <code>withProtectionDomain</code> method.
+    the specification of an explicit protection domain by calling the <code>with</code> method.
     Defining an explicit protection domain is important when using security managers or when working with classes
     that are defined in signed jars.
 </p>
