Indicates requirement for byte-buddy-agent dependency on tutorial.partial.html
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -752,7 +752,9 @@ class Bar {
 </p>
 
 <pre class="prettyprint">
+// Requires byte-buddy-agent dependency
 ByteBuddyAgent.install();
+
 Foo foo = new Foo();
 new ByteBuddy()
   .redefine(Bar.class)
