--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -859,7 +859,7 @@ class MyApplication {
     <code>TypePool</code> to provide a description. If we did use a class literal for <code>foo.Bar</code>, the JVM
     would have loaded this class before we had a chance to redefine it and our redefinition attempt would be without
     effect. Also, note that when working with unloaded classes, we further need to specify a
-    <code>ClassFileLocator</code> which allows to locate a class's class file. In the example above, we simply
+    <code>ClassFileLocator</code> which allows to locate a class' <code>.class</code> file. In the example above, we simply
     create a class file locator which scans the running application's class path for such files.
 </p>
 
