--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<div class="col-md-8 col-md-offset-1" id="affixComponent">
+<div class="col-md-8 col-md-offset-1" id="affixComponent" ng-controller="dataController">
 
     <select class="lang" ng-model="lang" ng-change="changeLang()">
         <option value="cn">中文</option>
@@ -595,7 +595,7 @@ new ByteBuddy().rebase(Foo.class)
     created by Byte Buddy is represented by an instance of <code>DynamicType.Unloaded</code>. As the name
     suggests, these types are not loaded into the Java virtual machine. Instead, classes created by Byte Buddy are
     represented in their binary form, in the
-    <a href="http://docs.oracle.com/javase/specs/jvms/se8/html/jvms-4.html">Java class file format</a>. This way,
+    <a data-ng-href="{{classFileFormatUrl}}">Java class file format</a>. This way,
     it is up to you to decide what you want to do with a generated type. For example, you might want to run
     Byte Buddy from a build script that only generates classes to enhance a Java application before it is deployed.
     For this purpose, the <code>DynamicType.Unloaded</code> class allows to extract a byte array that represents
@@ -2212,14 +2212,14 @@ new ByteBuddy()
 
 </div>
 
-<div class="row" id="customization">
+<div class="row" id="customization" ng-controller="dataController">
 
 <h2>Custom method implementations</h2>
 
 <p>
     In the previous sections, we described Byte Buddy's standard API. None of the features described so far
     requires knowledge or the explicit expression of Java byte code. However, if you require to create custom
-    byte code, you can do so by directly accessing the API of <a href="http://asm.ow2.org/">ASM</a>, a
+    byte code, you can do so by directly accessing the API of <a data-ng-href="{{asmUrl}}">ASM</a>, a
     low-level byte code library on top of which Byte Buddy is built. However, note that different versions of ASM
     are not compatible to another such that you need to repackage Byte Buddy into your own namespace when releasing
     your code. Otherwise, your application might introduce incompatibilities to other uses of Byte Buddy when
@@ -2230,7 +2230,7 @@ new ByteBuddy()
 
 <p>
     The ASM library comes with
-    <a href="https://asm.ow2.io/asm4-guide.pdf">an excellent documentation</a> of Java byte
+    <a href="{{asmUrl}}/asm4-guide.pdf">an excellent documentation</a> of Java byte
     code and on the use of the library. Therefore, we want to refer you to this documentation in case that you want
     to learn in detail about Java byte code and ASM's API. Instead, we are only going to provide a brief introduction
     to the JVM's execution model and Byte Buddy's adaption of ASM's API.
