--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -772,7 +772,7 @@ assertThat(foo.m(), is("bar"));
     <code>-javaagent</code> parameter where the parameter's argument needs to be Byte Buddy's agent jar which can be
     <a href="https://search.maven.org/search?q=a:byte-buddy-agent">downloaded from Maven Central</a>. However,
     when a Java application is run from a JDK-installation of the Java virtual machine, Byte Buddy can load a Java
-    agent even after application startup by <code>ByteBuddyAgent.installOnOpenJDK()</code>. Because class redefinition
+    agent even after application startup by <code>ByteBuddyAgent.install()</code>. Because class redefinition
     is mostly used to implement tooling or testing, this can be a very convenient alternative.
     Since Java 9, an agent installation is also possible at runtime without a JDK-installation.
 </p>
@@ -859,7 +859,7 @@ class MyApplication {
     <code>TypePool</code> to provide a description. If we did use a class literal for <code>foo.Bar</code>, the JVM
     would have loaded this class before we had a chance to redefine it and our redefinition attempt would be without
     effect. Also, note that when working with unloaded classes, we further need to specify a
-    <code>ClassFileLocator</code> which allows to locate a class' <code>.class</code> file. In the example above, we simply
+    <code>ClassFileLocator</code> which allows to locate a class's <code>.class</code> file. In the example above, we simply
     create a class file locator which scans the running application's class path for such files.
 </p>
 
@@ -907,7 +907,7 @@ new AgentBuilder.Default()
 </pre>
 
 <p>
-    As a result of the applying the above <code>AgentBuilder.Transformer</code>, all <code>toString</code> methods
+    As a result of applying the above <code>AgentBuilder.Transformer</code>, all <code>toString</code> methods
     of the annotated classes would now return <code>transformed</code>. We will learn all about Byte Buddy's
     <code>DynamicType.Builder</code> in the upcoming sections, do not worry about this class for now. The above
     code results of course in a trivial and meaningless application. Using this concept right, renders however a
@@ -922,7 +922,7 @@ new AgentBuilder.Default()
     class's implementation. In order to load classes into the bootstrap class loader, Byte Buddy can create jar files
     and add these files to the bootstrap class loader's load path. To make this possible, it is however required to
     save these classes to disk. A folder for these classes can be specified using the
-    <code>enableBootstrapInjection</code> command which also takes an instance of the <code>Instrumentation</code>
+    <code>ClassReloadingStrategy.enableBootstrapInjection</code> method which also takes an instance of the <code>Instrumentation</code>
     interface in order to append the classes. Note that all user classes that are used by the instrumented class are
     also required to be put on the bootstrap search path which is possible using the <code>Instrumentation</code>
     interface.
